[routes][1.1]Update chaincode
